Opened 15 years ago
Closed 15 years ago
#768 closed defect (fixed)
infinite loop in ffmpeg_g when using .mov file
| Reported by: | Diana Muscalu | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avformat |
| Version: | git-master | Keywords: | mov stsd loop |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
Attachments (1)
Change History (2)
by , 15 years ago
| Attachment: | aletrek-rle.mov added |
|---|
comment:1 by , 15 years ago
| Component: | FFmpeg → avformat |
|---|---|
| Keywords: | mov stsd loop added |
| Reproduced by developer: | set |
| Resolution: | → fixed |
| Status: | new → closed |
Note:
See TracTickets
for help on using tickets.



use zzuf -c -s1:2000 -r0.001 ffmpeg_g -i aletrek-rle.mov -f null - to produce the loop