mov: Fix near infinite loop in stsd parsing. Fixes Ticket768 Bug found by: Diana Elena Muscalu

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>